Fixed the issue - Slider text and pagination overlaps on smaller screen  - Issue : #21

--- a/style.css
+++ b/style.css
@@ -997,6 +997,11 @@ input[type=submit]:hover,
   color: #fff;
 }
 
+div.flex-caption {
+    top: auto;
+    bottom: 25%;
+}
+
 /* =Navigation
 ----------------------------------------------- */
 
